prome-grafana/rate-limiting.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit
  namespace: default
spec:
  rateLimit:
    burst: 100
    average: 50
    period: 1m
    sourceCriterion:
      ipStrategy:
        depth: 1
