prome-grafana/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prometheus.42n.fun`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: default # Namespace tempat backend-app berada
spec:
  podSelector:
    matchLabels:
      app: backend-app # Pilih Pod backend-app Anda
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring # Pilih namespace monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus # Pilih Pod Prometheus
      ports:
        - protocol: TCP
          port: 8080 # Port yang digunakan backend-app untuk metrik
